--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- primary meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant</title>
+    <meta name="description" content="This is a Restaurant html template made by codewithsadee">
+    <title>Grilli - Restaurant</title>
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./assets/favicon.svg" type="image/svg+xml">
+
+    <!-- googel font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
     
 </body>
+
 </html>
