css link and perload image

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
 
+    <!-- css link -->
+    <link rel="stylesheet" href="./assets/css/style.css">
+
+    <!-- preload images -->
+    <link rel="stylesheet" href="./assets/image/hero-slider-1.jpg">
+
 </head>
 
 <body>
