--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <!-- preload images -->
-    <link rel="stylesheet" href="./assets/image/hero-slider-1.jpg">
+    <link rel="preload" as="image" href="./assets/image/hero-slider-1.jpg">
 
 </head>
 
 <body>
     
+    <!-- custom link js -->
+    <script src="./assets/js/script.js"></script>
+
 </body>
 
 </html>
