--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
+
+    <!-- Preload -->
     <div class="preload" data-preaload>
         <div class="circle"></div>
         <p class="text">Grilli</p>
     </div>
+
+    
+
+
 
 </body>
 
