preload text add css

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <!-- Preload -->
     <div class="preload" data-preaload>
         <div class="circle"></div>
-        <p class="text">Grilli</p>
+        <p class="text">GRILLI</p>
     </div>
 
-    
+
 
 
 
