loading text update

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
     <!-- Preload -->
-    <div class="preload" data-preaload>
+    <div class="preload loaded" data-preaload>
         <div class="circle"></div>
         <p class="text">GRILLI</p>
     </div>
