--- a/index.html
+++ b/index.html
@@ -25,23 +25,35 @@
 </head>
 
 <body>
-    
-    <!-- custom link js -->
-    <script src="./assets/js/script.js"></script>
-    <!-- ionicon link -->
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 
     <!-- Preload -->
-    <div class="preload loaded" data-preaload>
+    <div class="preload" data-preaload>
         <div class="circle"></div>
         <p class="text">GRILLI</p>
     </div>
 
 
 
+    <!-- Top Bar -->
+    <div class="topbar">
+        <div class="container">
 
+            <address class="topbar_item">
+                <div class="icon"></div>
+            </address>
+
+        </div>
+    </div>
+
+
+
+
+<!-- custom link js -->
+<script src="./assets/js/script.js"></script>
+<!-- ionicon link -->
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 
