top bar html update

--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
         <div class="container">
 
             <address class="topbar_item">
-                <div class="icon"></div>
+                <div class="icon">
+                    <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
+                </div>
+                <span class="span">
+                    Restaurant St, Bambalapitiya , Colombo 3, SL
+                </span>
             </address>
 
         </div>
