update topbar html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
                 </span>
             </address>
 
+            <div class="separator"></div>
+
+            <div class="topbar_item item2">
+                <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
+            </div>  
+
+            <span class="span">Daily : 8.00 am to 10.00 pm</span>
+
+            <a href="tel:+1 123 456 7890" class="topbar_item">
+                <div class="icn">
+                    <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
+                </div>
+
+                <span class="span">+1 123 456 7890</span>
+            </a>
+
         </div>
     </div>
 
