all don top bar html

--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
                 <span class="span">+1 123 456 7890</span>
             </a>
 
+            <div class="sparator"></div>
+
+            <a href="mail:booking@restaurant.com " class="topbar_item">
+                <div class="icn">
+                    <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
+                </div>
+
+                <span class="span">booking@restaurant.com
+                </span>
+            </a>
+
         </div>
     </div>
 
