add grilli logo and header html

--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
 
 
 
+    <!-- Header -->
+    <header class="header">
+        <div class="container">
+            <a href="#" class="logo">
+                <img src="./assets/image/logo.svg" width="160" height="50" alt="Grilli - Home">
+            </a>
+        </div>
+    </header>
+
+
 
 <!-- custom link js -->
 <script src="./assets/js/script.js"></script>
@@ -90,32 +100,5 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
