update header html

--- a/index.html
+++ b/index.html
@@ -83,9 +83,32 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
+
             <a href="#" class="logo">
                 <img src="./assets/image/logo.svg" width="160" height="50" alt="Grilli - Home">
             </a>
+
+            <nav class="navbar" data-navbar>
+                <button class="close-btn" aria-label = "close menu" data-nav-toggler>
+                    <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
+                </button>
+                
+                <a href="#" class="logo">
+                    <img src="./assets/image/logo.svg" alt="Grilli - Home">
+                </a>
+
+                <ul class="navbarilist">
+
+                    <li class="navbar-item">
+                        <a href="#home" class="navbar-link hover-underline active">
+                            <div class="separator"></div>
+
+                            <span class="span">Home</span>
+                        </a>
+                    </li>
+
+                </ul>
+            </nav>
         </div>
     </header>
 
