update header html

--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
                         </a>
                     </li>
 
+                    <li class="navbar-item">
+                        <a href="#" class="navbar-link hover-underline">
+                            <div class="separator"></div>
+
+                            <span class="span">Our Chefs</span>
+                        </a>
+                    </li>
+
+                    <div class="text-center"></div>
+
                 </ul>
             </nav>
         </div>
