--- a/index.html
+++ b/index.html
@@ -131,7 +131,18 @@
                         </a>
                     </li>
 
-                    <div class="text-center"></div>
+                    <div class="text-center">
+                        <p class="headline-1 navbar-title">Visit Us</p>
+
+                        <address class="body-4">
+                            Restaurant St, Bambalapitiya, <br>
+                            Colombo 03, SL
+                        </address>
+
+                        <p class="body-4 navbar-text">Open: 9.30 am - 2.30pm</p>
+
+                        <a href="mailto:booking@grilli.com" class="body-4 sidebar-link">booking@grilli.com</a>
+                    </div>
 
                 </ul>
             </nav>
