--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
                         </a>
                     </li>
 
+                    <li class="navbar-item">
+                        <a href="#" class="navbar-link hover-underline">
+                          <div class="separator"></div>
+            
+                          <span class="span">Contact</span>
+                        </a>
+                      </li>
+
+                </ul>
+
                     <div class="text-center">
                         <p class="headline-1 navbar-title">Visit Us</p>
 
@@ -142,10 +152,27 @@
                         <p class="body-4 navbar-text">Open: 9.30 am - 2.30pm</p>
 
                         <a href="mailto:booking@grilli.com" class="body-4 sidebar-link">booking@grilli.com</a>
+
+                        <div class="separator"></div>
+
+                        <p class="contact-label">Booking Request</p>
+
+                        <a href="tel:+88-123-123456" class="body-1 contact-number hover-underline">+88-123-123456</a>
                     </div>
 
-                </ul>
             </nav>
+
+            <a href="#" class="btn btn-secondary">
+                <span class="text text-1">Find A Table</span>
+
+                <span class="text text-2" aria-hidden="true">Find A Table</span>
+            </a>
+
+            <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
+                <span class="line line-1"></span>
+                <span class="line line-2"></span>
+                <span class="line line-3"></span>
+            </button>
         </div>
     </header>
 
