header hide,active css

--- a/index.html
+++ b/index.html
@@ -178,6 +178,14 @@
 
 
 
+    <main>
+        <article>
+            
+        </article>
+    </main>
+
+
+
 <!-- custom link js -->
 <script src="./assets/js/script.js"></script>
 <!-- ionicon link -->
