--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <img src="./assets/image/logo.svg" alt="Grilli - Home">
                 </a>
 
-                <ul class="navbarilist">
+                <ul class="navbar-list">
 
                     <li class="navbar-item">
                         <a href="#home" class="navbar-link hover-underline active">
@@ -116,7 +116,7 @@
                     </li>
 
                     <li class="navbar-item">
-                        <a href="#about" class="navbarlink hover-underline">
+                        <a href="#about" class="navbar-link hover-underline">
                             <div class="separator"></div>
 
                             <span class="span">About Us</span>
