--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="topbar">
         <div class="container">
 
-            <address class="topbar_item">
+            <address class="topbar-item">
                 <div class="icon">
                     <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
                 </div>
@@ -50,13 +50,13 @@
 
             <div class="separator"></div>
 
-            <div class="topbar_item item2">
+            <div class="topbar-item item2">
                 <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
             </div>  
 
             <span class="span">Daily : 8.00 am to 10.00 pm</span>
 
-            <a href="tel:+1 123 456 7890" class="topbar_item">
+            <a href="tel:+1 123 456 7890" class="topbar-item">
                 <div class="icn">
                     <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
                 </div>
@@ -88,7 +88,7 @@
                 <img src="./assets/image/logo.svg" width="160" height="50" alt="Grilli - Home">
             </a>
 
-            <nav class="navbar" data-navbar>
+            <nav class="navbar active" data-navbar>
                 <button class="close-btn" aria-label = "close menu" data-nav-toggler>
                     <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
                 </button>
