--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <ul class="navbar-list">
 
                     <li class="navbar-item">
-                        <a href="#home" class="navbar-link hover-underline active">
+                        <a href="#home" class="navbar-link hover-underline ">
                             <div class="separator"></div>
 
                             <span class="span">Home</span>
