--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                 <span class="line line-2"></span>
                 <span class="line line-3"></span>
             </button>
+
+            <div class="overlay" data-nav-toggler data-overlay></div>
+
         </div>
     </header>
 
