--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
 
     <!-- css link -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
 
     <!-- preload images -->
     <link rel="preload" as="image" href="./assets/image/hero-slider-1.jpg">
@@ -183,6 +183,35 @@
 
     <main>
         <article>
+            
+            <!-- HERO -->
+
+            <section class="section hero text-center"></section>
+
+            <ul class="hero-slider" data-hero-slider>
+
+                <li class="slider-item active" data-hero-slider-item>
+
+                    <div class="slider-bg">
+                        <img src="./assets/image/hero-slider-1.jpg" width="1880" height="950" alt="" class="img-cover">
+                    </div>
+
+                    <p class="label-2 section-subtitle slider-reveal">Traditional & Hygine</p>
+
+                    <h1 class="display-1 hero-title slider-reveal">For the love of <br> delicious food</h1>
+
+                    <p class="body-2 hero-text slider-reveal">
+                        Come with family & feel the joy of mouthwatering food
+                    </p>
+
+                    <a href="#" class="btn btn-primary slider-reveal">
+                        <span class="text text-1">View Our Menu</span>
+
+                        <span class="text text-2">View Our Menu</span>
+                    </a>
+
+                </li>
+            </ul>
 
         </article>
     </main>
