hero slider2 image

--- a/index.html
+++ b/index.html
@@ -207,10 +207,20 @@
                     <a href="#" class="btn btn-primary slider-reveal">
                         <span class="text text-1">View Our Menu</span>
 
-                        <span class="text text-2">View Our Menu</span>
+                        <span class="text text-2" aria-hidden="true">View Our Menu</span>
                     </a>
+                </li>
+
+                <li class="slider-item" data-hero-slider-item>
+
+                    <div class="slider-bg">
+                        <img src="./assets/image/hero-slider-2.jpg" width="1880" height="950" alt="" class="img-cover">
+                    </div>
+
+                    
 
                 </li>
+
             </ul>
 
         </article>
