update hero section

--- a/index.html
+++ b/index.html
@@ -211,13 +211,22 @@
                     </a>
                 </li>
 
+
+                
                 <li class="slider-item" data-hero-slider-item>
 
                     <div class="slider-bg">
                         <img src="./assets/image/hero-slider-2.jpg" width="1880" height="950" alt="" class="img-cover">
                     </div>
 
-                    
+                    <p class="lable-2 section-subtitle slider-reveal">delightful experience</p>
+
+                    <h1 class="display-1 hero-title slider-reveal">Flavors Inspired by <br> the Seasons</h1>
+
+                    <p class="body-2 hero-text slider-reveal">
+                        Come with family & feel the joy of mouthwatering food
+                    </p>
+
 
                 </li>
 
