--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </li>
 
 
-                
+
                 <li class="slider-item" data-hero-slider-item>
 
                     <div class="slider-bg">
@@ -227,6 +227,11 @@
                         Come with family & feel the joy of mouthwatering food
                     </p>
 
+                    <a href="#" class="btn btn-primary slider-reveal">
+                        <span class="text text-1">View Our Menu</span>
+
+                        <span class="text text-2 aria-hidden">View Our Menu</span>
+                    </a>
 
                 </li>
 
