add hero secction 3rdd image

--- a/index.html
+++ b/index.html
@@ -232,6 +232,14 @@
 
                         <span class="text text-2 aria-hidden">View Our Menu</span>
                     </a>
+                </li>
+
+
+                <li class="slider-item data-hero-item">
+
+                    <div class="slider-bg">
+                        <img src="./assets/image/service-3.jpg" width="1880" height="950" alt="" class="img-cover">
+                    </div>
 
                 </li>
 
