--- a/index.html
+++ b/index.html
@@ -241,6 +241,15 @@
                         <img src="./assets/image/service-3.jpg" width="1880" height="950" alt="" class="img-cover">
                     </div>
 
+                    <p class="lable-2 section-subtitle slider-reveal">amazing & deliciouss</p>
+
+                    <h1 class="display-1 hero-title slider-reveal">
+                        Where every flavor <br> tells a story
+                    </h1>
+
+                    <p class="body-2 hero-text slider-reveal">
+                        Come with family & feel the joy of mouthwatering food
+                    </p>
                 </li>
 
             </ul>
