--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <a href="#" class="btn btn-primary slider-reveal">
                         <span class="text text-1">View Our Menu</span>
 
-                        <span class="text text-2 aria-hidden">View Our Menu</span>
+                        <span class="text text-2" aria-hidden="true">View Our Menu</span>
                     </a>
                 </li>
 
@@ -250,6 +250,12 @@
                     <p class="body-2 hero-text slider-reveal">
                         Come with family & feel the joy of mouthwatering food
                     </p>
+
+                    <a href="#" class="btn btn-primary slider-reveal">
+                        <span class="text text-1">View Our Menu</span>
+
+                        <span class="text text-2" aria-hidden="true"></span>
+                    </a>
                 </li>
 
             </ul>
