all home section

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             
             <!-- HERO -->
 
-            <section class="section hero text-center"></section>
+            <section class="section hero text-center" aria-label="home" id="home">
 
             <ul class="hero-slider" data-hero-slider>
 
@@ -254,11 +254,28 @@
                     <a href="#" class="btn btn-primary slider-reveal">
                         <span class="text text-1">View Our Menu</span>
 
-                        <span class="text text-2" aria-hidden="true"></span>
+                        <span class="text text-2" aria-hidden="true">View Our Menu</span>
                     </a>
                 </li>
-
             </ul>
+
+
+            <button class="slider-btn prev" aria-label="slide to previous" data-prev-btn>
+                <ion-icon name="chevron-back"></ion-icon>
+            </button>
+
+            <button class="slider-btn next" aria-label="slide to next" data-next-btn>
+                <ion-icon name="chevron-forward"></ion-icon>
+            </button>
+
+            <a href="#" class="hero-btn has-after">
+                <img src="./assets/image/hero-icon.png" width="48" height="48" alt="booking icon">
+
+                <span class="lable-2 text-center span">Book A Table</span>
+            </a>
+
+        </section>
+
 
         </article>
     </main>
