--- a/index.html
+++ b/index.html
@@ -277,6 +277,22 @@
         </section>
 
 
+        <!-- SERVICE -->
+
+        <section class="section service bg-black-10 text-center" aria-label="service">
+            <div class="container"></div>
+
+            <p class="section-sutitle lable-2">Flavors For Royalty</p>
+
+            <h2 class="headline-1 section-title">We Offer Top Notch</h2>
+
+            <p class="section-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate atque ipsum alias quas facilis, nobis assumenda accusamus obcaecati illum, corrupti, optio exercitationem magnam sit laborum magni quae voluptas porro dolorem.
+            </p>
+
+            
+        </section>
+
         </article>
     </main>
 
