service section update

--- a/index.html
+++ b/index.html
@@ -290,7 +290,20 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate atque ipsum alias quas facilis, nobis assumenda accusamus obcaecati illum, corrupti, optio exercitationem magnam sit laborum magni quae voluptas porro dolorem.
             </p>
 
+            <ul class="grid-list">
+
+                <li>
+                    <div class="service-card">
+
+                        <a href="#" class="has-befor hover:shine">
+                            <figure class="card-banner img-holder" style="width: 285; height: 336;">
+                                <img src="./assets/image/service-1.jpg" width="285" height="336" loading="lazy" alt="Breakfast">
+                            </figure>
+                        </a>
+                    </div>
+                </li>
             
+            </ul>
         </section>
 
         </article>
