update servicee appetizer

--- a/index.html
+++ b/index.html
@@ -297,9 +297,32 @@
 
                         <a href="#" class="has-befor hover:shine">
                             <figure class="card-banner img-holder" style="width: 285; height: 336;">
-                                <img src="./assets/image/service-1.jpg" width="285" height="336" loading="lazy" alt="Breakfast">
+                                <img src="./assets/image/service-1.jpg" width="285" height="336" loading="lazy" alt="Breakfast"
+                                    class="img-cover">
                             </figure>
                         </a>
+
+                        <div class="card-content">
+
+                            <h3 class="title-4 card-title">
+                                <a href="#">Breakfast</a>
+                            </h3>
+
+                            <a href="#" class="btn-text hover-underline label-2">View Menu</a>
+
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="service-card">
+
+                        <a href="#" class="has-befor hover:shine">
+                            <figure class="card-banner img-holder" style="width: 285; height: 336;">
+                                <img src="./assets/image/service-2.jpg" width="285" loading="lazy" height="336" alt="Appetizers" class="img-cover">
+                            </figure>
+                        </a>
+
                     </div>
                 </li>
             
