update service drink section

--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
                     </div>
                 </li>
 
+
                 <li>
                     <div class="service-card">
 
@@ -322,6 +323,38 @@
                                 <img src="./assets/image/service-2.jpg" width="285" loading="lazy" height="336" alt="Appetizers" class="img-cover">
                             </figure>
                         </a>
+
+                        <div class="ccard-title">
+
+                            <h3 class="title-4 card-title">
+                                <a href="#">Appetizers</a>
+                            </h3>
+
+                            <s class="btn-text hover-underline label-2">View Menu</s>
+
+                        </div>
+                    </div>
+                </li>
+
+
+                <li>
+                    <div class="service-card">
+
+                        <a href="#" class="has-before hover:shine">
+                            <figure class="card-banner img-holder" style="width: 285; height: 336;">
+                                <img src="./assets/image/service-3.jpg" width="285" height="336" loading="lazy" alt="Drinks" class="img-cover">
+                            </figure>
+                        </a>
+
+                        <div class="card-content">
+
+                            <h3 class="title-4 card-title">
+                                <a href="#">Drinks</a>
+                            </h3>
+
+                            <a href="#" class="btn-text hover-underline label-2">View Menu</a>
+
+                        </div>
 
                     </div>
                 </li>
