update appetizer section

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                 <a href="#">Appetizers</a>
                             </h3>
 
-                            <s class="btn-text hover-underline label-2">View Menu</s>
+                            <a href="#" class="btn-text hover-underline label-2">View Menu</a>
 
                         </div>
                     </div>
