all don service

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <!-- SERVICE -->
 
         <section class="section service bg-black-10 text-center" aria-label="service">
-            <div class="container"></div>
+            <div class="container">
 
             <p class="section-sutitle lable-2">Flavors For Royalty</p>
 
@@ -355,11 +355,15 @@
                             <a href="#" class="btn-text hover-underline label-2">View Menu</a>
 
                         </div>
-
                     </div>
                 </li>
-            
             </ul>
+
+
+            <img src="./assets/image/shape-1.png" width="246" height="412" loading="lazy" alt="shape" class="shape shape-1 move-anim">
+            <img src="./assets/image/shape-2.png" width="343" height="345" loading="lazy" alt="shape" class="shape shape-2 move-anim">
+
+            </div>
         </section>
 
         </article>
