add about section

--- a/index.html
+++ b/index.html
@@ -366,6 +366,23 @@
             </div>
         </section>
 
+
+        <!-- ABOUT -->
+
+        <section class="section about text-center" aria-labelledby="about-lable" id="about">
+            <div class="container">
+
+                <div class="about-content">
+
+                    <p class="label-2 section-subtitle" id="about-label">Our Story</p>
+
+                    <h2 class="hedline-1 section-title">Every Fla vor Tells a Story</h2>
+
+                </div>
+
+            </div>
+        </section>
+
         </article>
     </main>
 
