update about section

--- a/index.html
+++ b/index.html
@@ -378,7 +378,40 @@
 
                     <h2 class="hedline-1 section-title">Every Fla vor Tells a Story</h2>
 
+                    <p class="section-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam deserunt architecto, sequi ullam 
+                        aspernatur reprehenderit error inventore corrupti cumque <br>
+                        aperiam amet voluptatum quo laboriosam aut optio, ut id possimus vero.
+                    </p>
+
+                    <div class="contact-lable">Book Through Call</div>
+
+                    <a href="tel: +94 701094749" class="body-1 contact-number-hover-underline">+80 (400) 123 4567</a>
+
+                    <a href="#" class="btn btn-primary">
+                        <span class="text text-1">Read More</span>
+
+                        <span class="text text-2" aria-hidden="true">Read More</span>
+                    </a>
+
                 </div>
+
+
+                <figure class="about-banner">
+
+                    <img src="./assets/image/about-banner.jpg" width="570" height="570" loading="lazy" alt="about banner"
+                    class="w-100" data-parallax-item data-parallax-speed="1">
+      
+                  <div class="abs-img abs-img-1 has-before" data-parallax-item data-parallax-speed="1.75">
+                    <img src="./assets/image/about-abs-image.jpg" width="285" height="285" loading="lazy" alt=""
+                      class="w-100">
+                  </div>
+      
+                  <div class="abs-img abs-img-2 has-before">
+                    <img src="./assets/image/badge-2.png" width="133" height="134" loading="lazy" alt="">
+                  </div>
+
+                </figure>
 
             </div>
         </section>
