add special dhish section

--- a/index.html
+++ b/index.html
@@ -416,6 +416,21 @@
             </div>
         </section>
 
+        
+
+        <!-- SPECIAL DISH -->
+
+        <section class="spectiol-dish text-center" aria-labelledby="dish-label">
+
+            <div class="special-dish-banner">
+                <img src="./assets/images/special-dish-banner.jpg" width="940" height="900" loading="lazy" alt="special dish" class="img-cover">
+            </div>
+
+            
+
+        </section>
+
+
         </article>
     </main>
 
