update spectiol dish section

--- a/index.html
+++ b/index.html
@@ -426,7 +426,35 @@
                 <img src="./assets/images/special-dish-banner.jpg" width="940" height="900" loading="lazy" alt="special dish" class="img-cover">
             </div>
 
-            
+            <div class="special-dish-content bg-black-10">
+                <div class="container">
+
+                    <img src="./assets/image/badge-1.png" width="28" height="41" loading="lazy" alt="badge" class="abs-img">
+
+                    <p class="section-subtitle label-2">Special Dish</p>
+
+                    <h2 class="headline-1 section-title">Lobster Tortelline</h2>
+
+                    <p class="section-text">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam unde fuga ipsa velit <br>
+                        tenetur molestiae magni reprehenderit possimus optio voluptates! Magnambr <br>
+                        perferendis sint obcaecati facere ipsum dolor necessitatibus delectus accusantium.
+                    </p>
+
+                    <div class="wrapper">
+                        <del class="del body-3">$40.00</del>
+
+                        <span class="span body-1">$20.00</span>
+                    </div>
+
+                    <a href="#" class="btn btn-primary">
+                        <span class="text text-1">View All Menu</span>
+
+                        <span class="text text-2" aria-hidden="true">View All Menu</span>
+                    </a>
+
+                </div>
+            </div>
 
         </section>
 
