add image dish section

--- a/index.html
+++ b/index.html
@@ -456,6 +456,9 @@
                 </div>
             </div>
 
+            <img src="./assets/image/shape-4.png" width="179" height="359" alt="" class="shape shape-1">
+            <img src="./assets/image/shape-9.png" width="351" height="462" alt="" class="shape shape-2">
+
         </section>
 
 
