--- a/index.html
+++ b/index.html
@@ -465,6 +465,30 @@
 
         <!-- MENU -->
 
+        <section class="section menu" aria-label="menu-label" id="menu">
+            <div class="container">
+
+                <p class="section-subtitle text-center label-2">Special Selection</p>
+
+                <h2 class="headline-1 section-title text-center">Delicious Menu</h2>
+
+                <ul class="grid-list">
+
+                    <li>
+                        <div class="menu-card hover:card">
+
+                            <figure class="card-banner img-holder" style="width: 100; height: 100;">
+                                <img src="./assets/image/menu-1.png" width="100" height="100" loading="lazy" alt="Greek Salad" class="img-cover">
+                            </figure>
+
+                        </div>
+
+                    </li>
+                </ul>
+
+            </div>
+        </section>
+
         </article>
     </main>
 
