--- a/index.html
+++ b/index.html
@@ -481,9 +481,34 @@
                                 <img src="./assets/image/menu-1.png" width="100" height="100" loading="lazy" alt="Greek Salad" class="img-cover">
                             </figure>
 
-                        </div>
 
+                            <div>
+                                <div class="title-wrapper">
+                                    <h3 class="title-3">
+                                        <a href="#" class="card-title-2">Greek Salad</a>
+                                    </h3>
+
+                                    <span class="badg lable-1">Seasonal</span>
+
+                                    <span class="span title-2">$25.50</span>
+                                </div>
+
+                                <p class="card-text label-1">
+                                    Tomatoes, green bell pepper, sliced cucumber onion, olives, and feta cheese.
+                                </p>
+                            </div>
+                        </div>
                     </li>
+
+                    <li>
+                        <div class="menu-card hover:card">
+
+                            <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
+                              <img src="./assets/image/menu-2.png" width="100" height="100" loading="lazy" alt="Lasagne"
+                                class="img-cover">
+                            </figure>
+                    </li>
+                    
                 </ul>
 
             </div>
