--- a/index.html
+++ b/index.html
@@ -507,6 +507,22 @@
                               <img src="./assets/image/menu-2.png" width="100" height="100" loading="lazy" alt="Lasagne"
                                 class="img-cover">
                             </figure>
+
+                            <div>
+
+                                <div class="title-wrapper">
+                                    <h3 class="title-3">
+                                        <a href="#" class="card-title">Lasagne</a>
+                                    </h3>
+
+                                    <span class="span title-2">$40.00</span>
+                                </div>
+
+                                <p class="card-text label-1">
+                                    Vegetables, cheeses, ground meats, tomato sauce, seasonings and spices
+                                </p>
+
+                            </div>
                     </li>
                     
                 </ul>
