--- a/index.html
+++ b/index.html
@@ -523,8 +523,32 @@
                                 </p>
 
                             </div>
+                        </div>
                     </li>
                     
+
+                    <li>
+                        <div class="menu-card hover:card">
+
+                            <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
+                                <img src="./assets/image/menu-3.png" width="100" height="100" loading="lazy" alt="Butternut Pumpkin"
+                                  class="img-cover">
+                              </figure>
+
+                              <div>
+
+                                <div class="title-wrapper">
+                                    <h3 class="title-3">
+                                        <a href="#" class="card-title">Butternut Pumpkin</a>
+                                    </h3>
+
+                                    <span class="span title-2">$10.00</span>
+                                </div>
+                              </div>
+
+                        </div>
+                    </li>
+
                 </ul>
 
             </div>
