update menu section

--- a/index.html
+++ b/index.html
@@ -544,8 +544,22 @@
 
                                     <span class="span title-2">$10.00</span>
                                 </div>
-                              </div>
 
+                                <p class="card-text label-1">
+                                    Typesetting industry lorem Lorem Ipsum is simply dummy text of the priand.
+                                </p>
+
+                            </div>
+                        </div>
+                    </li>
+
+
+                    <li>
+                        <div class="menu-card hover:card">
+                            <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
+                                <img src="./assets/images/menu-4.png" width="100" height="100" loading="lazy" alt="Tokusen Wagyu"
+                                  class="img-cover">
+                              </figure>
                         </div>
                     </li>
 
