--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
         <section class="spectiol-dish text-center" aria-labelledby="dish-label">
 
             <div class="special-dish-banner">
-                <img src="./assets/images/special-dish-banner.jpg" width="940" height="900" loading="lazy" alt="special dish" class="img-cover">
+                <img src="./assets/image/special-dish-banner.jpg" width="940" height="900" loading="lazy" alt="special dish" class="img-cover">
             </div>
 
             <div class="special-dish-content bg-black-10">
@@ -557,9 +557,22 @@
                     <li>
                         <div class="menu-card hover:card">
                             <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
-                                <img src="./assets/images/menu-4.png" width="100" height="100" loading="lazy" alt="Tokusen Wagyu"
+                                <img src="./assets/image/menu-4.png" width="100" height="100" loading="lazy" alt="Tokusen Wagyu"
                                   class="img-cover">
                               </figure>
+
+                              <div>
+
+                                <div class="title-wrapper">
+                                    <h3 class="title-3">
+                                        <a href="#" class="card-title">Tokusen Wagyu</a>
+                                    </h3>
+
+                                    <span class="badge label-1">New</span>
+
+                                    <span class="pan title-2">$39.00</span>
+                                </div>
+                              </div>
                         </div>
                     </li>
 
