Testimonials section add

--- a/index.html
+++ b/index.html
@@ -655,6 +655,27 @@
             </div>
         </section>
 
+
+        <!-- Testimonials -->
+
+        <section class="section testi text text-center has-bg-image" style="background-image: url(./assets/image/testimonial-bg.jpg);"
+        aria-label="Testimonials">
+            
+        <div class="container">
+
+            <div class="quote">"</div>
+
+            <p class="headline-2 testi-text">
+                I wanted to thank you for inviting me down for that amazing dinner the other night. The food was
+            extraordinary.
+            </p>
+
+        </div>
+        
+
+        </section>
+
+
         </article>
     </main>
 
