all don Testimonials

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
 
         <!-- Testimonials -->
 
-        <section class="section testi text text-center has-bg-image" style="background-image: url(./assets/image/testimonial-bg.jpg);"
+    <section class="section testi text text-center has-bg-image" style="background-image: url(./assets/image/testimonial-bg.jpg);"
         aria-label="Testimonials">
             
         <div class="container">
@@ -670,10 +670,22 @@
             extraordinary.
             </p>
 
-        </div>
-        
+            <div class="wrapper">
+                <div class="separator"></div>
+                <div class="separator"></div>
+                <div class="separator"></div>
+                <div class="separator"></div>
+            </div>
 
-        </section>
+            <div class="profile">
+                <img src="./assets/images/testi-avatar.jpg" width="100" height="100" loading="lazy" alt="Sam Jhonson"
+                class="img">
+  
+              <p class="label-2 profile-name">Sam Jhonson</p>
+
+            </div>
+        </div>
+    </section>
 
 
         </article>
