--- a/index.html
+++ b/index.html
@@ -688,6 +688,32 @@
     </section>
 
 
+    <!-- Reservation -->
+
+    <section class="reservation">
+        <div class="container">
+
+            <div class="from reservation-from bg-black-10">
+                <form action="" class="form-left">
+
+                    <h2 class="headline-1 text-center">Online Reservation</h2>
+      
+                    <p class="form-text text-center">
+                      Booking request <a href="tel:+88123123456" class="link">+88-123-123456</a>
+                      or fill out the order form
+                    </p>
+                    
+                    <div class="input-wrapper">
+                        <input type="text" name="name" placeholder="Your Name" autocomplete="off" class="input-field">
+
+                        <input type="tel" name="phone" placeholder="Phone Number" autocomplete="off" class="input-field">
+                    </div>
+
+            </div>
+        </div>
+    </section>
+
+
         </article>
     </main>
 
