--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                     <h2 class="headline-1 text-center">Online Reservation</h2>
       
                     <p class="form-text text-center">
-                      Booking request <a href="tel:+88123123456" class="link">+88-123-123456</a>
+                      Booking request <a href="tel:+94 701094749" class="link">+94 701094749</a>
                       or fill out the order form
                     </p>
                     
@@ -707,6 +707,26 @@
                         <input type="text" name="name" placeholder="Your Name" autocomplete="off" class="input-field">
 
                         <input type="tel" name="phone" placeholder="Phone Number" autocomplete="off" class="input-field">
+                    </div>
+
+                    <div class="input-wrapper">
+
+                        <div class="icon-wrapper">
+                            <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
+
+                            <select name="person" id="" class="input-fielld">
+                                <option value="1-person">1 person</option>
+                                <option value="1-person">2 person</option>
+                                <option value="1-person">3 person</option>
+                                <option value="1-person">4 person</option>
+                                <option value="1-person">5 person</option>
+                                <option value="1-person">6 person</option>
+                                <option value="1-person">7 person</option>
+                            </select>
+
+
+
+                        </div>
                     </div>
 
             </div>
