--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                                 <option value="1-person">7 person</option>
                             </select>
 
-
+                            <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
 
                         </div>
                     </div>
