--- a/index.html
+++ b/index.html
@@ -724,9 +724,17 @@
                                 <option value="1-person">7 person</option>
                             </select>
 
+                            <ion-icon name="calendar-clear-outline" aria-hidden="true"></ion-icon>
+                        </div>
+
+                        <div class="icon-wrapper">
                             <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
 
+                            <input type="date" name="reservation-date" class="input-field">
+
+                            <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
                         </div>
+
                     </div>
 
             </div>
