--- a/index.html
+++ b/index.html
@@ -735,6 +735,28 @@
                             <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
                         </div>
 
+                        <div class="icon-wrapper">
+                            <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
+
+                            <select name="person" class="input-field">
+                                <option value="08:00am">08 : 00 am</option>
+                                <option value="09:00am">09 : 00 am</option>
+                                <option value="010:00am">10 : 00 am</option>
+                                <option value="011:00am">11 : 00 am</option>
+                                <option value="012:00am">12 : 00 am</option>
+                                <option value="01:00pm">01 : 00 pm</option>
+                                <option value="02:00pm">02 : 00 pm</option>
+                                <option value="03:00pm">03 : 00 pm</option>
+                                <option value="04:00pm">04 : 00 pm</option>
+                                <option value="05:00pm">05 : 00 pm</option>
+                                <option value="06:00pm">06 : 00 pm</option>
+                                <option value="07:00pm">07 : 00 pm</option>
+                                <option value="08:00pm">08 : 00 pm</option>
+                                <option value="09:00pm">09 : 00 pm</option>
+                                <option value="10:00pm">10 : 00 pm</option>
+                            </select>
+                        </div>
+
                     </div>
 
             </div>
