--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
 
               <p class="contact-label">Booking Request</p>
 
-              <a href="tel:+88123123456" class="body-1 contact-number hover-underline">+88-123-123456</a>
+              <a href="tel:+94701094749" class="body-1 contact-number hover-underline">+94701094749</a>
 
               <div class="separator"></div>
 
@@ -785,7 +785,7 @@
 
               <address class="body-4">
                 Restaurant St, Delicious City, <br>
-                London 9578, UK
+                Colombo 03, SL
               </address>
 
               <p class="contact-label">Lunch Time</p>
@@ -806,7 +806,7 @@
             </div>
           </div>
         </div>
-        
+
     </section>
 
 
