--- a/index.html
+++ b/index.html
@@ -810,6 +810,13 @@
     </section>
 
 
+    <!-- Features -->
+
+    <section class="section features text-center" aria-label="features">
+        
+    </section>
+
+
         </article>
     </main>
 
