--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
 
     <!-- css link -->
-    <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
+    <link rel="stylesheet" href="./assets/css/style.css">
 
     <!-- preload images -->
     <link rel="preload" as="image" href="./assets/image/hero-slider-1.jpg">
@@ -44,7 +44,7 @@
                     <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
                 </div>
                 <span class="span">
-                    Restaurant St, Bambalapitiya , Colombo 3, SL
+                    Restaurant St, Bambalapitiya , Colombo 03, SL
                 </span>
             </address>
 
@@ -1003,12 +1003,12 @@
           </a>
 
           <address class="body-4">
-            Restaurant St, Delicious City, London 9578, UK
+            Restaurant St,  Bambalapitiya, Colombo 03, SL
           </address>
 
           <a href="mailto:booking@grilli.com" class="body-4 contact-link">booking@grilli.com</a>
 
-          <a href="tel:+88123123456" class="body-4 contact-link">Booking Request : +88-123-123456</a>
+          <a href="tel:+94 701094749" class="body-4 contact-link">Booking Request : +94 701094749</a>
 
           <p class="body-4">
             Open : 09:00 am - 01:00 pm
